fix items alignment

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,9 +9,7 @@
   //overflow-y: scroll;
   &__line {
     display: flex;
-    div {
-      margin-right: 10px
-    }
+    justify-content: space-between;
   }
   &__line, &__line-block {
     .limited-width {
